--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,51 +1,60 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context="com.example.testchat.MainActivity"
-    android:background="#000">
-
-    <RelativeLayout
-        android:id="@+id/rl_main_header"
-        android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize"
-        android:layout_alignParentTop="true"
-        android:background="@drawable/background_message_sender"
-        android:padding="2dp">
-
-        <android.support.v7.widget.CardView
-            android:id="@+id/cv_main_profile"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:layout_centerVertical="true"
-            android:layout_marginEnd="8dp"
-            android:layout_marginStart="2dp"
-            android:layout_toStartOf="@+id/popupMenu_feed_main"
-            app:cardCornerRadius="20dp">
-
-            <ImageView
-                android:id="@+id/imageView_main_userprofile"
+                xmlns:app="http://schemas.android.com/apk/res-auto"
+                xmlns:tools="http://schemas.android.com/tools"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:contentDescription="Profile Image"
-                android:scaleType="centerCrop"
-                android:src="@drawable/ic_person_24dp" />
+                tools:context="com.example.testchat.MainActivity"
+                android:background="#000">
+
+    <RelativeLayout
+            android:id="@+id/rl_main_header"
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            android:layout_alignParentTop="true"
+            android:background="@drawable/background_message_sender"
+            android:padding="2dp">
+
+        <TextView
+                android:text="user"
+                android:layout_width="150dp"
+                android:layout_height="40dp" android:id="@+id/userNameText" android:textSize="18sp"
+                android:textStyle="bold"
+                android:layout_alignParentBottom="true" android:layout_marginBottom="5dp"
+                android:layout_marginTop="13dp" android:layout_alignParentTop="true"
+                android:layout_alignParentStart="true" android:layout_marginStart="14dp"
+                android:textColor="@android:color/background_light" android:textAlignment="viewStart"/>
+        <android.support.v7.widget.CardView
+                android:id="@+id/cv_main_profile"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_centerVertical="true"
+                android:layout_marginEnd="8dp"
+                android:layout_marginStart="2dp"
+                android:layout_toStartOf="@+id/popupMenu_feed_main"
+                app:cardCornerRadius="20dp">
+
+            <ImageView
+                    android:id="@+id/imageView_main_userprofile"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:contentDescription="Profile Image"
+                    android:scaleType="centerCrop"
+                    android:src="@drawable/ic_person_24dp"/>
         </android.support.v7.widget.CardView>
 
         <ImageView
-            android:id="@+id/popupMenu_feed_main"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
-            android:layout_centerVertical="true"
-            android:layout_marginEnd="8dp"
-            android:layout_marginStart="4dp"
-            android:contentDescription="main_menu_overflow"
-            android:onClick="showPopupSetting"
-            android:paddingTop="4dp"
-            android:src="@drawable/ic_reorder_24dp" />
+                android:id="@+id/popupMenu_feed_main"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
+                android:layout_centerVertical="true"
+                android:layout_marginEnd="8dp"
+                android:layout_marginStart="4dp"
+                android:contentDescription="main_menu_overflow"
+                android:onClick="showPopupSetting"
+                android:paddingTop="4dp"
+                android:src="@drawable/ic_reorder_24dp"/>
     </RelativeLayout>
 
     <android.support.v7.widget.RecyclerView
@@ -57,23 +66,23 @@
             android:background="#000"/>
 
     <LinearLayout
-        android:id="@+id/ll_main_no_messages"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:orientation="vertical"
-        android:visibility="gone">
+            android:id="@+id/ll_main_no_messages"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:orientation="vertical"
+            android:visibility="gone">
 
         <ImageView
-            android:layout_width="160dp"
-            android:layout_height="160dp"
-            android:layout_gravity="center_horizontal"
-            android:src="@drawable/ic_no_messages" />
+                android:layout_width="160dp"
+                android:layout_height="160dp"
+                android:layout_gravity="center_horizontal"
+                android:src="@drawable/ic_no_messages"/>
 
         <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="უი! ჯერ არავის მოუწერია"
+                android:text="უი, ჯერ არავის მოუწერია"
                 android:textAlignment="center"
                 android:textSize="24sp" android:textColor="@color/colorPrimary1"/>
     </LinearLayout>
