--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -62,7 +62,8 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_below="@+id/rl_main_header"
-            android:visibility="visible" android:layout_marginTop="0dp"
+            android:visibility="visible"
+            android:layout_marginTop="0dp"
             android:background="#000"/>
 
     <LinearLayout
